more spacing fixes

--- a/styles.css
+++ b/styles.css
@@ -45,5 +45,5 @@ body {
 
 #address {
   margin: 20px;
-  /*margin-top: 20px;*/
+  margin-top: 40px;
 }
